Fix overflow in scrolling container, wobble on resize and scroll

--- a/src/components/calcite-tab-nav/calcite-tab-nav.scss
+++ b/src/components/calcite-tab-nav/calcite-tab-nav.scss
@@ -19,17 +19,33 @@
   justify-content: center;
 }
 
+// prevent indicator overflow in horizontal scrolling situations
+.tab-nav-active-indicator-container {
+  width: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 3px;
+  position: absolute;
+  overflow: hidden;
+}
+
 .tab-nav-active-indicator {
   position: absolute;
   bottom: 0;
   background: var(--calcite-ui-blue-1);
   display: block;
   height: 3px;
-  transition: all 0.3s ease-out;
+  transition: all ease-out;
 }
 
 // positioning
 :host([position="below"]) .tab-nav-active-indicator {
+  bottom: unset;
+  top: 0;
+}
+
+:host([position="below"]) .tab-nav-active-indicator-container {
   bottom: unset;
   top: 0;
 }
